# EvalWatch

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  observe.py  users.py
app/core/: config.py  security.py
app/crud/: user.py
app/models/: base.py  observe.py  user.py
app/schemas/: observe.py
app/services/: google_auth.py
